--- a/gradle.properties
+++ b/gradle.properties
@@ -44,6 +44,8 @@ mod_version=0.0.0
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
 mod_group_id=org.tp
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
-mod_authors=
+mod_authors=TanPowasd
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
 mod_description=
+
+curios_version=5.14.1+1.20.1
