--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -75,3 +75,58 @@ mandatory=true
 versionRange="[3.10.1.76,)"
 ordering = "NONE"
 side = "BOTH"
+
+[[dependencies.asod]]
+modId="mantle"
+mandatory=true
+versionRange="[1.11.63,)"
+ordering = "NONE"
+side = "BOTH"
+
+[[dependencies.asod]]
+modId="cataclysm"
+mandatory=false
+versionRange="[3.08,)"
+ordering = "NONE"
+side = "BOTH"
+
+[[dependencies.asod]]
+modId="curios"
+mandatory=false
+versionRange="[5.14.1+1.20.1,)"
+ordering = "NONE"
+side = "BOTH"
+
+[[dependencies.asod]]
+modId="jade"
+mandatory=false
+versionRange="[11.13.1,)"
+ordering = "NONE"
+side = "BOTH"
+
+[[dependencies.asod]]
+modId="irons_spellbooks"
+mandatory=false
+versionRange="[1.20.1-3.3.0.1,)"
+ordering = "NONE"
+side = "BOTH"
+
+[[dependencies.asod]]
+modId="ars-nouveau"
+mandatory=false
+versionRange="[1.20.1-4.12.7,)"
+ordering = "NONE"
+side = "BOTH"
+
+[[dependencies.asod]]
+modId="ice-and-fire-dragons"
+mandatory=false
+versionRange="[2.1.13-1.20.1,)"
+ordering = "NONE"
+side = "BOTH"
+[[dependencies.asod]]
+modId="create"
+mandatory=false
+versionRange="[6.0.5,)"
+ordering = "NONE"
+side = "BOTH"
